--- a/style.css
+++ b/style.css
@@ -114,11 +114,11 @@ button{
 
 .quote{
     background-color: #E5E7EB;
-    padding: 70px 200px;
+    padding: 70px 15%;
     display: flex;
     flex-flow: column nowrap;
     align-items: center;
-    font-size: 36px;
+    font-size: 28px;
     color: #4f5966;
 }
 
@@ -131,7 +131,7 @@ button{
 }
 
 .sign-up-banner{
-    margin: 100px 200px;
+    margin: 100px 15%;
     display: flex;
     justify-content: space-around;
     align-items: center;
